# docs/swagger.json
@@ -1636,6 +1636,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Hapus data Veganguide berdasarkan ID yang diberikan",
                 "consumes": [
                     "application/json"
